--- a/.tekton/cd_pipeline/task-appconfig-cd.yaml
+++ b/.tekton/cd_pipeline/task-appconfig-cd.yaml
@@ -140,7 +140,7 @@ spec:
              git commit -m "App Configuration value changes"
              git push --set-upstream origin $localBranchName
              title="App Configuration Value Changes"
-             curl -H "Content-Type: application/json" -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"'"${title}"'","head":"'$localBranchName'","base":"main"}'
+             curl -H "Content-Type: application/json" -H "Authorization: token $GIT_TOKEN" https://api.github.com/repos/jojustin/toolchain-sample/pulls -d '{"title":"'"${title}"'","head":"'$localBranchName'","base":"'$BRANCH'"}'
              echo "New App Configuration updates are committed to the repo.  PR needs to be approved to proceed."
              exit 1
             fi
