--- a/.tekton/cd_pipeline/task-appconfig-cd.yaml
+++ b/.tekton/cd_pipeline/task-appconfig-cd.yaml
@@ -103,7 +103,7 @@ spec:
       command: ["/bin/bash", "-c"]
       args:
         - |
-          set -e -v -o pipefail;
+          set -e -x -o pipefail;
           folderName=$(echo ${REPOSITORY##*/})
           #customize as per the app folder structure
           cd $folderName/nodejs
