--- a/.tekton/cd_pipeline/task-appconfig-cd.yaml
+++ b/.tekton/cd_pipeline/task-appconfig-cd.yaml
@@ -49,7 +49,7 @@ spec:
           set -e;          
           #to do - change this
           replacestr=$GIT_TOKEN@github
-          sampleGitUrl=${REPOSITORY/github/$replacestr}
+          GIT_URL=${REPOSITORY/github/$replacestr}
 
           echo "$REPOSITORY"
           echo "$REPOSITORY" | sed "s/github/$replaceStr/"
@@ -60,7 +60,7 @@ spec:
           echo "replace string $test1"
           
           echo "sample url -----++++++++$sampleGitUrl"
-          GIT_URL="https://$GIT_TOKEN@github.com/jojustin/appconfiguration-samples.git"
+          #GIT_URL="https://$GIT_TOKEN@github.com/jojustin/appconfiguration-samples.git"
           echo "Cloning $sampleGitUrl"
           repo_exists=$(git ls-remote $GIT_URL 2>&1 | cut -d':' -f2 | head -1 | awk '{print $1,$2,$3}')
           if [ "$repo_exists" == "Repository not found." ]; then
