--- a/.tekton/cd_pipeline/task-appconfig-cd.yaml
+++ b/.tekton/cd_pipeline/task-appconfig-cd.yaml
@@ -112,12 +112,12 @@ spec:
             baseUrl=${BASEURL/apprapp/$subdomain}
             
             configUrl="${baseUrl}${GUID}/collections/${COLLECTIONID}/config"
-            until $(curl -X GET $configUrl -H 'Authorization: HZnt9mG6eAPDQ_IO6UONAuf-q9KgO44QrfMO_sdKrwgY'| jq . > featuretemp.json); do
+            until $(curl -X GET $configUrl -H 'Authorization: $API_KEY'| jq . > featuretemp.json); do
                printf 'waiting...'
                sleep 5
             done
-            #cat feature.json
-            #cat featuretemp.json
+            cat feature.json
+            cat featuretemp.json
             
             diff -wB  "$FEATUREFILEPATH" featuretemp.json  >/dev/null;REPLY=$?
             #echo "Reply is $REPLY"
