--- a/.tekton/cd_pipeline/task-appconfig-cd.yaml
+++ b/.tekton/cd_pipeline/task-appconfig-cd.yaml
@@ -105,7 +105,7 @@ spec:
             baseUrl=${BASEURL/apprapp/$subdomain}
             
             configUrl="${baseUrl}${GUID}/collections/${COLLECTIONID}/config"
-            until $(curl -X GET $configUrl -H "Authorization: $API_KEY" | jq . > featuretemp.json); do
+            until $(curl -H "Authorization: $API_KEY" $configUrl | jq . > featuretemp.json); do
                printf 'waiting...'
                sleep 5
             done
